--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URI = mongodb+srv://nextjs13:nextjs13@cluster0.xvrhv.mongodb.net
+MONGO_URI = mongodb+srv://vermabhavi7890:8VV4rirTsVA9FH8D@cluster0.7pto8i1.mongodb.net/
 
-JWT_SECRET = ajksdhaskjdhasjkdhjkashdjsakdh
+JWT_SECRET = bhavi
 
 
 URL = http://localhost:3000
